# psqlview

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST.md  docker-compose.yml  rust-toolchain.toml
docker/: builder.Dockerfile  init.sql
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  types.rs
src/app/: autocomplete.rs  clipboard.rs  file_io.rs  history.rs  keys.rs  mod.rs  query.rs  tests.rs  toasts.rs
src/app/keys/: cell_edit.rs  cmdline.rs  connect.rs  find.rs  mod.rs  tree.rs  util.rs  workspace.rs
src/db/: catalog.rs  connect.rs  mod.rs  query.rs
src/ui/: autocomplete.rs  autocomplete_context.rs  cell_edit.rs  cheatsheet.rs  clipboard.rs  command_line.rs  confirm_update.rs  connect_dialog.rs  csv_export.rs  editor.rs  file_prompt.rs  find.rs  goto_line.rs  json_export.rs  mod.rs  path_hint.rs  results.rs  row_detail.rs  schema_tree.rs  sql_export.rs  sql_format.rs  sql_lexer.rs  status.rs  substitute_confirm.rs
src/ui/editor/: bracket.rs  buffer.rs  edit.rs  edits.rs  insert.rs  mod.rs  mode.rs  motion.rs  normal.rs  render.rs  tab.rs  tests.rs  text_object.rs  undo.rs  util.rs  visual.rs
src/ui/find/: key.rs  match_engine.rs  mod.rs  render.rs  tests.rs
src/ui/results/: explain.rs  mod.rs  render.rs  tests.rs
tests/: integration_catalog.rs  integration_common.rs  integration_connect.rs  integration_query.rs
